k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sravan-web
  namespace: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sravan-web
  template:
    metadata:
      labels:
        app: sravan-web
    spec:
      containers:
      - name: sravan-web
        image: IMAGE_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
