k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sravan-web-service
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: sravan-web
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
